# video-summary-bot

./: .env.example  .gitignore  CLAUDE.md  COLLAB.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: tenbox-reference.md
gui/web/: app.js  index.html  styles.css
installer/: vsb-setup.iss
scripts/: build-installer.ps1  build-rootfs.sh  prepare-guest.sh  quick-rootfs.sh
src/: error.rs  guest_control.rs  lib.rs  main.rs
src/agents/: claude.rs  mod.rs  planner.rs
src/api/: mod.rs  vm_store.rs
src/cli/: gui.rs  mod.rs  summary.rs  system.rs  vm.rs
src/config/: mod.rs
src/crawler/: comments.rs  danmaku.rs  mod.rs  subtitle.rs
src/daemon/: mod.rs
src/devices/: mod.rs  serial.rs  virtio_block.rs  virtio_console.rs  virtio_fs.rs  virtio_gpu.rs  virtio_input.rs  virtio_mmio.rs  virtio_net.rs  virtio_snd.rs
src/gui/: desktop.rs  mod.rs
src/hypervisor/: linux.rs  macos.rs  mod.rs  windows.rs
src/image/: mod.rs  qcow2.rs  raw.rs
src/ipc/: guest_agent.rs  mod.rs
src/network/: dhcp.rs  llm_proxy.rs  mod.rs  nat.rs
src/summarizer/: asr.rs  mod.rs  timeline.rs
src/utils/: binary.rs  logging.rs  mod.rs  resource.rs
src/vmm/: boot.rs  core.rs  loader.rs  memory.rs  mod.rs  vcpu.rs
terminals/: 1.txt  2.txt  3.txt
