[package]
name = "video-summary-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "基于 Rust + KVM + Claude Code 的智能视频内容总结工具"
license = "MIT"
repository = "https://github.com/Vesper6/video-summary-bot"
homepage = "https://github.com/Vesper6/video-summary-bot"
readme = "README.md"
keywords = ["video", "summary", "ai", "claude", "kvm"]
categories = ["command-line-utilities", "api-bindings", "video-processing"]
authors = ["Vesper6 <your.email@example.com>"]

[[bin]]
name = "video-summary-bot"
path = "src/main.rs"

[lib]
name = "video_summary_bot"
path = "src/lib.rs"

# =============================================
# 依赖
# =============================================
[dependencies]

# 异步运行时
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# CLI 框架
clap = { version = "4.5", features = ["derive", "env"] }

# 配置与环境变量
config = { version = "0.14", features = ["toml", "yaml", "json"] }
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 浏览器自动化（KVM 虚拟机内）
chromiumoxide = { version = "0.6", features = ["tokio-runtime"], default-features = false }

# KVM 沙箱（可选直接 ioctl）
# 注：高级场景推荐使用 libvirt-rs
kvm-ioctls = { version = "0.13", optional = true }
kvm-bindings = { version = "0.9", optional = true }

# libvirt（VM 生命周期管理）
libvirt = { version = "0.7", optional = true }

# HTTP API 服务
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# TUI
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# 进度条
indicatif = "0.17"

# 正则
regex = "1.10"

# URL 解析
url = "2.5"

# 文件系统操作
walkdir = "2.5"
tempfile = "3.13"

# 并发
parking_lot = "0.12"
dashmap = "6.1"

# Base64 / Hash
base64 = "0.22"
sha2 = "0.10"

# =============================================
# Feature flags
# =============================================
[features]
default = ["kvm-libvirt", "tui"]
kvm-direct = ["dep:kvm-ioctls", "dep:kvm-bindings"]
kvm-libvirt = ["dep:libvirt"]
tui = ["dep:ratatui", "dep:crossterm"]

# =============================================
# 开发依赖
# =============================================
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
pretty_assertions = "1.4"
tempfile = "3.13"
proptest = "1.4"

# =============================================
# 构建优化
# =============================================
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
opt-level = 0
debug = 1
incremental = true